# devstack-plugin-tar-installer

./: .gitreview  CONTRIBUTING.rst  HACKING.rst  README.md  README.rst  setup.cfg  tox.ini
devstack/: README.rst  build_libvirt.sh  build_qemu.sh  plugin.sh  settings
devstack-plugin-tar-installer/: __init__.py
devstack-plugin-tar-installer/tests/: test_devstack-plugin-tar-installer.py
doc/source/: conf.py  index.rst  installation.rst  usage.rst
