[metadata]
name = devstack-plugin-tar-installer
summary = By default DevStack installs all the software needed to run OpenStack from the OS' repository, however sometimes there is a need to test OpenStack against the latest (or custom) versions of specific software programs (e.g., qemu and libvirt).
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    devstack-plugin-tar-installer

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = devstack-plugin-tar-installer/locale
domain = devstack-plugin-tar-installer

[update_catalog]
domain = devstack-plugin-tar-installer
output_dir = devstack-plugin-tar-installer/locale
input_file = devstack-plugin-tar-installer/locale/devstack-plugin-tar-installer.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = devstack-plugin-tar-installer/locale/devstack-plugin-tar-installer.pot
